--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,10 @@
             <section>
                 <div class="container">
                     <h2>HOME PAGE</h2>
+                    <button class="button button--icon">Send</button>
+                    <div class="modal">
+                        
+                    </div>
                 </div>
             </section>
             <section></section>
