--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -62,7 +62,7 @@
                                             <p>I was born in January 1990. After getting my Degree in computer science in 2002, I persuaded my higher study in Human Computer Interaction Design. I got my first job as Graphic Designer in the year 2008. After getting experience in graphic for a year, I moved to UI-UX Designing. </p> <br>
                                              <p> In 2010, I decided to work as a Freelance Web, UI-UX & Mobile Interface Designer. I find myself still in the learning phase and have strong desire to achieve as many skills as I can.</p>
                                           </div>      
-                                          <div class="button about__button">Resume  <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
+                                          <button class="button button--icon about__button">Resume </button>
                                        </div>     
                                      
                     
