--- a/src/pages/works.html
+++ b/src/pages/works.html
@@ -48,44 +48,51 @@
         </header>
 
         <main class="works-page">
-            <section class="works">
-                <div class="container works__container">
-                    <div class="works__hero">
-                        <div class="title works__title">Works</div>
-                        <div class="h4 works__describe">Hello! I’m Manifest – a Freelance UI/UX Designer from Berlin,
+            <section class="hero">
+                <div class="container hero__container">
+                    <div class="hero__content">
+                        <div class="title hero__title animation">Works</div>
+                        <div class="h4 hero__describe animation">Hello! I’m Manifest – a Freelance UI/UX Designer from Berlin,
                             Germany.</div>
                     </div>
-                    <div class="works__row">
-<div class="works__item">
-<div class="works__item-describe">
-    <div class="h3 works__item-title">Car Sharing App</div>
-    <div class="h6 works__item-text">Product Design</div>
-    <div class="h6 works__item-date">2020</div>
-    <div class="button works__button">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
-</div>
-<img class="works__img" src="../img/works-img1.jpg" alt="">
-</div>
-<div class="works__item">
-    <div class="works__item-describe">
-        <div class="h3 works__item-title">AI Fashion Platform</div>
-        <div class="h6 works__item-text">User Centered Website Redesign</div>
-        <div class="h6 works__item-date">2019</div>
-        <div class="button works__button">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
-    </div>
-    <img class="works__img" src="../img/works-img2.jpg" alt="">
-    </div>
-    <div class="works__item">
-        <div class="works__item-describe">
-            <div class="h3 works__item-title">Redesigning DropBox</div>
-            <div class="h6 works__item-text">Product Design</div>
-            <div class="h6 works__item-date">2018</div>
-            <div class="button works__button">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
-        </div>
-        <img class="works__img" src="../img/works-img3.jpg" alt="">
-        </div>
-                    </div>
-
                 </div>
+            </section>
+
+            <section class="cart">
+                <div class="container cart__container">
+                    <div class="cart__row">
+                        <div class="cart__item">
+                        <div class="cart__item-describe">
+                            <div class="h3 cart__item-title animation">Car Sharing App</div>
+                            <div class="h6 cart__item-text animation">Product Design</div>
+                            <div class="h6 cart__item-date animation">2020</div>
+                            <div class="button cart__button animation">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
+                        </div>
+                        <img class="cart__img animation" src="../img/works-img1.jpg" alt="">
+                        </div>
+                        <div class="cart__item">
+                            <div class="works__item-describe">
+                                <div class="h3 cart__item-title animation">AI Fashion Platform</div>
+                                <div class="h6 cart__item-text animation">User Centered Website Redesign</div>
+                                <div class="h6 cart__item-date animation">2019</div>
+                                <div class="button cart__button animation">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
+                            </div>
+                            <img class="cart__img animation" src="../img/works-img2.jpg" alt="">
+                            </div>
+                            <div class="cart__item">
+                                <div class="cart__item-describe">
+                                    <div class="h3 cart__item-title animation">Redesigning DropBox</div>
+                                    <div class="h6 cart__item-text animation">Product Design</div>
+                                    <div class="h6 cart__item-date animation">2018</div>
+                                    <div class="button cart__button animation">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
+                                </div>
+                                <img class="cart__img animation" src="../img/works-img3.jpg" alt="">
+                                </div>
+                                            </div>
+                </div> 
+      
+
+               
 
             </section>
         </main>
