--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,17 @@
 <body>
 
     <div class="wrapper">
+        <!-- header -->
         <header class="header">
             <div class="container header__container">
-                <img class="logo" src="./img/logo.svg" alt="img">
+                <img class="logo" src="img/logo.svg" alt="img">
                 <nav class="header__nav">
                     <label class="header__nav-label" for="gam">
-                        <div class="header__nav-icon"><svg width="33" height="20" viewBox="0 0 33 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="33" height="3.83721" fill="black"/>
-                            <rect y="7.67432" width="33" height="3.83721" fill="black"/>
-                            <rect y="15.3486" width="33" height="3.83721" fill="black"/>
+                        <div class="header__nav-icon"><svg width="33" height="20" viewBox="0 0 33 20" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="33" height="3.83721" fill="black" />
+                                <rect y="7.67432" width="33" height="3.83721" fill="black" />
+                                <rect y="15.3486" width="33" height="3.83721" fill="black" />
                             </svg></div>
                     </label>
                     <input class="header__nav-input" type="checkbox" id="gam">
@@ -45,27 +47,79 @@
                 </nav>
             </div>
         </header>
+        <!-- header End -->
 
+        <!-- home-page -->
         <main class="home-page">
-            <section>
-                <div class="container">
-                    <h2>HOME PAGE</h2>
-                    <button class="button button--icon">Send</button>
-                    <div class="modal">
-                        
+
+            <!-- section hero -->
+            <section class="hero">
+                <div class="container hero__container">
+                    <h1 class="title hero__title">Manifest is a newborn theme.
+                        Clean, simple and fast.</h1>
+                </div>
+            </section>
+            <!-- section hero End -->
+
+            <!-- section slider -->
+            <section class="slider">
+                <div class="slider__item-1">
+                    <img class="slider__img" src="img/slider-01.jpg" alt="">
+                    <p class="h6 slider__name-hide">Mocha</p>
+                </div>
+                <div class="slider__item">
+                    <img class="slider__img" src="img/slider-02.jpg" alt="">
+                    <p class="h6 slider__name">Mixkit Inspo</p>
+                </div>
+                <div class="slider__item">
+                    <img class="slider__img" src="img/slider-03.jpg" alt="">
+                    <p class="h6 slider__name">Abalone</p>
+                </div>
+                <div class="slider__item-2">
+                    <img class="slider__img" src="img/slider-04.jpg" alt="">
+                    <p class="h6 slider__name">Dreamy</p>
+                </div>
+            </section>
+            <!-- section slider End -->
+
+            <!-- section describe -->
+            <section class="describe">
+                <div class="container describe__container">
+                    <div class="describe__info">
+                        <div class="describe__info-title">
+                            <p class="h3 describe__info-title-text describe__info-title-text1">Full-time UI/UX designer
+                            </p>
+                            <p class="h3 describe__info-title-text">
+                                Head of Design at VeronaLabs.com</p>
+                            <a class="describe__info-link-arrow link-arrow" href=""><svg width="24" height="12"
+                                    viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M23.5303 6.53033C23.8232 6.23744 23.8232 5.76257 23.5303 5.46967L18.7574 0.696701C18.4645 0.403807 17.9896 0.403807 17.6967 0.696701C17.4038 0.989594 17.4038 1.46447 17.6967 1.75736L21.9393 6L17.6967 10.2426C17.4038 10.5355 17.4038 11.0104 17.6967 11.3033C17.9896 11.5962 18.4645 11.5962 18.7574 11.3033L23.5303 6.53033ZM-6.7177e-08 6.75L23 6.75L23 5.25L6.7177e-08 5.25L-6.7177e-08 6.75Z"
+                                        fill="#7B7B7B" />
+                                </svg></a>
+                        </div>
+                        <div class="describe__info-text">
+                            <p class="h4 describe__info-text-par1">We work with clients around the world from our
+                                headquarters
+                                in Charleston, South Carolina.
+                            </p>
+                            <p class="h4 describe__info-text-par2">We focus on naming, branding, brand narratives,
+                                website
+                                design and development, and brand experiences.</p>
+                        </div>
                     </div>
                 </div>
             </section>
-            <section></section>
-            <section></section>
+
+            <!-- section describe End -->
         </main>
 
         <footer class="footer">
             <div class="container footer__container">
                 <div class="footer__content">
                     <div class="title footer__title">Need a project?</div>
-               <a class="h6 footer__contact" href="tel:2395550108">(239) 555-0108</a>
-               <a class="h6 footer__contact" href="mailto:tanya.hill@example.com">tanya.hill@example.com</a>
+                    <a class="h6 footer__contact" href="tel:2395550108">(239) 555-0108</a>
+                    <a class="h6 footer__contact" href="mailto:tanya.hill@example.com">tanya.hill@example.com</a>
                 </div>
                 <ul class="footer__social-row">
                     <li class="footer__social-item">
