--- a/src/pages/works.html
+++ b/src/pages/works.html
@@ -66,7 +66,9 @@
                             <div class="h3 cart__item-title animation">Car Sharing App</div>
                             <div class="h6 cart__item-text animation">Product Design</div>
                             <div class="h6 cart__item-date animation">2020</div>
-                            <div class="button cart__button animation">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
+                            <div class="button cart__button animation">
+                                <a class="button" href="case-works.html" target="_blank"> View More <span class="link-arrow"> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></a>
+                               </div>
                         </div>
                         <img class="cart__img animation" src="../img/works-img1.jpg" alt="">
                         </div>
@@ -75,7 +77,9 @@
                                 <div class="h3 cart__item-title animation">AI Fashion Platform</div>
                                 <div class="h6 cart__item-text animation">User Centered Website Redesign</div>
                                 <div class="h6 cart__item-date animation">2019</div>
-                                <div class="button cart__button animation">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
+                                <div class="button cart__button animation">
+                                    <a class="button" href="case-works.html" target="_blank"> View More <span class="link-arrow"> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></a>
+                                   </div>
                             </div>
                             <img class="cart__img animation" src="../img/works-img2.jpg" alt="">
                             </div>
@@ -84,7 +88,9 @@
                                     <div class="h3 cart__item-title animation">Redesigning DropBox</div>
                                     <div class="h6 cart__item-text animation">Product Design</div>
                                     <div class="h6 cart__item-date animation">2018</div>
-                                    <div class="button cart__button animation">View More <span> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></div>
+                                    <div class="button cart__button animation">
+                                        <a class="button" href="case-works.html" target="_blank"> View More <span class="link-arrow"> <svg width="20" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.53 6.53a.75.75 0 000-1.06L14.757.697a.75.75 0 00-1.06 1.06L17.939 6l-4.242 4.243a.75.75 0 001.06 1.06L19.53 6.53zM0 6.75h19v-1.5H0v1.5z" fill="#fff"/></svg></span></a>
+                                       </div>
                                 </div>
                                 <img class="cart__img animation" src="../img/works-img3.jpg" alt="">
                                 </div>
