--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -11,76 +11,164 @@
 </head>
 
 <body>
-  
+
     <div class="wrapper">
         <header class="header">
             <div class="container header__container">
-               <img class="logo" src="../img/logo.svg" alt="img">
-               <nav class="header__nav">
-                <label class="header__nav-label" for="gam">
-                     <div class="header__nav-icon"><svg width="33" height="20" viewBox="0 0 33 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="33" height="3.83721" fill="black"/>
-                        <rect y="7.67432" width="33" height="3.83721" fill="black"/>
-                        <rect y="15.3486" width="33" height="3.83721" fill="black"/>
-                        </svg></div>
-                </label>
-                <input class="header__nav-input" type="checkbox" id="gam">
-                <ul class="header__nav-row">
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="/">Home</a>
+                <img class="logo" src="../img/logo.svg" alt="img">
+                <nav class="header__nav">
+                    <label class="header__nav-label" for="gam">
+                        <div class="header__nav-icon"><svg width="33" height="20" viewBox="0 0 33 20" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="33" height="3.83721" fill="black" />
+                                <rect y="7.67432" width="33" height="3.83721" fill="black" />
+                                <rect y="15.3486" width="33" height="3.83721" fill="black" />
+                            </svg></div>
+                    </label>
+                    <input class="header__nav-input" type="checkbox" id="gam">
+                    <ul class="header__nav-row">
+                        <li class="header__nav-item">
+                            <a class="header__nav-link" href="/">Home</a>
+                        </li>
+                        <li class="header__nav-item  ">
+                            <a class="header__nav-link" href="./about.html">About</a>
+                        </li>
+                        <li class="header__nav-item ">
+                            <a class="header__nav-link" href="./works.html">Works</a>
+                        </li>
+                        <li class="header__nav-item header__nav-item--active">
+                            <a class="header__nav-link" href="./blog.html">Blog</a>
+                        </li>
+                        <li class="header__nav-item">
+                            <a class="header__nav-link" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <main class="blog-page">
+            <!-- section hero -->
+            <section class="hero">
+                <div class="container hero__container">
+                    <div class="title hero__title">Blog</div>
+                    <div class="hero__slider">
+                        <img class="hero__slider-img" src="../img/blog-slid.jpg" alt="">
+                        <div class="hero__slider-info">
+                            <div class="h6 hero__slider-name">Technology, Interface Design</div>
+                            <div class="h3 hero__slider-title">Using UX Design to Build a Sustainable Future</div>
+                            <div class="h6 hero__slider-date">6 May, 2020</div>
+                            <div class="h5 hero__slider-text">Transformation has to be driven by everybody, not just by
+                                climate groups, and we have a responsibility to use our influence to drive this. <a
+                                    class="describe__info-link-arrow link-arrow" href=""><svg width="24" height="12"
+                                        viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M23.5303 6.53033C23.8232 6.23744 23.8232 5.76257 23.5303 5.46967L18.7574 0.696701C18.4645 0.403807 17.9896 0.403807 17.6967 0.696701C17.4038 0.989594 17.4038 1.46447 17.6967 1.75736L21.9393 6L17.6967 10.2426C17.4038 10.5355 17.4038 11.0104 17.6967 11.3033C17.9896 11.5962 18.4645 11.5962 18.7574 11.3033L23.5303 6.53033ZM-6.7177e-08 6.75L23 6.75L23 5.25L6.7177e-08 5.25L-6.7177e-08 6.75Z"
+                                            fill="#7B7B7B" />
+                                    </svg></a></div>
+                            <div class="h6 hero__slider-change">
+                                <span class="hero__slider-num hero__slider-num-active">1</span>
+                                <span class="hero__slider-num">2</span>
+                                <span class="hero__slider-num">3</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- section hero End -->
+
+            <!-- section categories -->
+
+            <section class="categories">
+                <div class="container categories__container">
+                    <div class="categories__select">
+                        <span class="h6 categories__select-name">Categories:</span>
+                        <select class="categories__select-input select" name="" id="">
+                            <option value="">Interaction Design</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </div>
+                    <div class="categories__row">
+                        <div class="categories__row-cart categories__row-cart1">
+                            <div class="categories__item">
+                                <img class="categories__img" src="../img/blog-categories01.jpg" alt="">
+                                <div class="categories__info">
+                                    <div class="categories__info-text">Interface Design</div>
+                                    <div class="categories__info-date">8 June, 2020</div>
+                                </div>
+                                <div class="categories__title1">UX traffic light colours</div>
+                                <div class="categories__text">UI has to make a huge visual difference between warning,
+                                    an alert and a success.</div>
+                            </div>
+                            <div class="categories__item">
+                                <img class="categories__img" src="../img/blog-categories01.jpg" alt="">
+                                <div class="categories__info">
+                                    <div class="categories__info-text">Interface Design</div>
+                                    <div class="categories__info-date">8 June, 2020</div>
+                                </div>
+                                <div class="categories__title2">UX traffic light colours</div>
+                                <div class="categories__text">UI has to make a huge visual difference between warning,
+                                    an alert and a success.</div>
+                            </div>
+                        </div>
+                        <div class="categories__row-cart categories__row-cart2">
+                            <div class="categories__item">
+                                <img class="categories__img" src="../img/blog-categories01.jpg" alt="">
+                                <div class="categories__info">
+                                    <div class="categories__info-text">Interface Design</div>
+                                    <div class="categories__info-date">8 June, 2020</div>
+                                </div>
+                                <div class="categories__title3">UX traffic light colours</div>
+                                <div class="categories__text">UI has to make a huge visual difference between warning,
+                                    an alert and a success.</div>
+                            </div>
+                            <div class="categories__item">
+                                <img class="categories__img" src="../img/blog-categories01.jpg" alt="">
+                                <div class="categories__info">
+                                    <div class="categories__info-text">Interface Design</div>
+                                    <div class="categories__info-date">8 June, 2020</div>
+                                </div>
+                                <div class="categories__title4">UX traffic light colours</div>
+                                <div class="categories__text">UI has to make a huge visual difference between warning,
+                                    an alert and a success.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="categories__button"><button class="button button--icon ">Load More </button></div>
+
+
+
+                </div>
+            </section>
+            <!-- section categories End -->
+        </main>
+
+        <footer class="footer">
+            <div class="container footer__container">
+                <div class="footer__content">
+                    <div class="title footer__title">Need a project?</div>
+                    <a class="h6 footer__contact" href="tel:2395550108">(239) 555-0108</a>
+                    <a class="h6 footer__contact" href="mailto:tanya.hill@example.com">tanya.hill@example.com</a>
+                </div>
+                <ul class="footer__social-row">
+                    <li class="footer__social-item">
+                        <a class="h6 hover-link-animation footer__social-link" href="">Facebook</a>
                     </li>
-                    <li class="header__nav-item  ">
-                        <a class="header__nav-link" href="./about.html">About</a>
+                    <li class="footer__social-item">
+                        <a class="h6 hover-link-animation footer__social-link" href="">Instagram</a>
                     </li>
-                    <li class="header__nav-item ">
-                        <a class="header__nav-link" href="./works.html">Works</a>
+                    <li class="footer__social-item">
+                        <a class="h6 hover-link-animation footer__social-link" href="">Dribbble</a>
                     </li>
-                    <li class="header__nav-item header__nav-item--active">
-                        <a class="header__nav-link" href="./blog.html">Blog</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="./contact.html">Contact</a>
+                    <li class="footer__social-item">
+                        <a class="h6 hover-link-animation footer__social-link" href="">Linkedin</a>
                     </li>
                 </ul>
-               </nav>
+                <p class="h9 footer__description">© Copyright Manifest Theme. Allrights reserved</p>
             </div>
-                   </header>
-
-                  <main class="blog-page">
-                    <section>
-                        <div class="container">
-                            <h2>Blog PAGE</h2>
-                        </div>
-                       
-                    </section>
-                    <section></section>
-                    <section></section>
-                  </main>
-
-                  <footer class="footer">
-                    <div class="container footer__container">
-                        <div class="footer__content">
-                            <div class="title footer__title">Need a project?</div>
-                       <a class="h6 footer__contact" href="tel:2395550108">(239) 555-0108</a>
-                       <a class="h6 footer__contact" href="mailto:tanya.hill@example.com">tanya.hill@example.com</a>
-                        </div>
-                        <ul class="footer__social-row">
-                            <li class="footer__social-item">
-                                <a class="h6 hover-link-animation footer__social-link" href="">Facebook</a>
-                            </li>
-                            <li class="footer__social-item">
-                                <a class="h6 hover-link-animation footer__social-link" href="">Instagram</a>
-                            </li>
-                            <li class="footer__social-item">
-                                <a class="h6 hover-link-animation footer__social-link" href="">Dribbble</a>
-                            </li>
-                            <li class="footer__social-item">
-                                <a class="h6 hover-link-animation footer__social-link" href="">Linkedin</a>
-                            </li>
-                        </ul>
-                        <p class="h9 footer__description">© Copyright Manifest Theme. Allrights reserved</p>
-                    </div>
-                </footer>
+        </footer>
     </div>
 
     <!--Обовязково додавати потрібно для JS -->
