--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -60,7 +60,7 @@
                             <div class="h6 hero__slider-date">6 May, 2020</div>
                             <div class="h5 hero__slider-text">Transformation has to be driven by everybody, not just by
                                 climate groups, and we have a responsibility to use our influence to drive this. <a
-                                    class="describe__info-link-arrow link-arrow" href=""><svg width="24" height="12"
+                                    class="describe__info-link-arrow link-arrow" href="single-blog.html"><svg width="24" height="12"
                                         viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M23.5303 6.53033C23.8232 6.23744 23.8232 5.76257 23.5303 5.46967L18.7574 0.696701C18.4645 0.403807 17.9896 0.403807 17.6967 0.696701C17.4038 0.989594 17.4038 1.46447 17.6967 1.75736L21.9393 6L17.6967 10.2426C17.4038 10.5355 17.4038 11.0104 17.6967 11.3033C17.9896 11.5962 18.4645 11.5962 18.7574 11.3033L23.5303 6.53033ZM-6.7177e-08 6.75L23 6.75L23 5.25L6.7177e-08 5.25L-6.7177e-08 6.75Z"
@@ -94,49 +94,46 @@
                         <div class="categories__row-cart categories__row-cart1">
                             <div class="categories__item">
                                 <img class="categories__img" src="../img/blog-categories01.jpg" alt="">
-                                <div class="categories__info">
+                                <div class="h9 categories__info">
                                     <div class="categories__info-text">Interface Design</div>
                                     <div class="categories__info-date">8 June, 2020</div>
                                 </div>
-                                <div class="categories__title1">UX traffic light colours</div>
-                                <div class="categories__text">UI has to make a huge visual difference between warning,
+                                <div class="h3 categories__title1">UX traffic light colours</div>
+                                <div class="h5 categories__text">UI has to make a huge visual difference between warning,
                                     an alert and a success.</div>
                             </div>
                             <div class="categories__item">
-                                <img class="categories__img" src="../img/blog-categories01.jpg" alt="">
-                                <div class="categories__info">
-                                    <div class="categories__info-text">Interface Design</div>
+                                <img class="categories__img" src="../img/blog-categories02.jpg" alt="">
+                                <div class="h9 categories__info">
+                                    <div class="categories__info-text">Visual Design, Technology</div>
                                     <div class="categories__info-date">8 June, 2020</div>
                                 </div>
-                                <div class="categories__title2">UX traffic light colours</div>
-                                <div class="categories__text">UI has to make a huge visual difference between warning,
-                                    an alert and a success.</div>
+                                <div class="h3 categories__title2">Understanding users by going beyond personas, demographics, and affinity </div>
+                                <div class="h5 categories__text">Personas are great for ‘humanizing’ users. However, you shouldn’t rely on them to define what larger demographic or affinity groups—especially diverse ones—might want</div>
                             </div>
                         </div>
                         <div class="categories__row-cart categories__row-cart2">
                             <div class="categories__item">
-                                <img class="categories__img" src="../img/blog-categories01.jpg" alt="">
-                                <div class="categories__info">
+                                <img class="categories__img" src="../img/blog-categories03.jpg" alt="">
+                                <div class="h9 categories__info">
                                     <div class="categories__info-text">Interface Design</div>
                                     <div class="categories__info-date">8 June, 2020</div>
                                 </div>
-                                <div class="categories__title3">UX traffic light colours</div>
-                                <div class="categories__text">UI has to make a huge visual difference between warning,
-                                    an alert and a success.</div>
+                                <div class="h3 categories__title3">Mentorship Match — How a simple LinkedIn feature can boost diversity</div>
+                                <div class="h5 categories__text">LinkedIn is on a clear mission to make professionals more successful by connecting the global workforce and as we learned — diversity and success go hand in hand</div>
                             </div>
                             <div class="categories__item">
-                                <img class="categories__img" src="../img/blog-categories01.jpg" alt="">
-                                <div class="categories__info">
-                                    <div class="categories__info-text">Interface Design</div>
+                                <img class="categories__img" src="../img/blog-categories04.jpg" alt="">
+                                <div class="h9 categories__info">
+                                    <div class="categories__info-text">Visual Design</div>
                                     <div class="categories__info-date">8 June, 2020</div>
                                 </div>
-                                <div class="categories__title4">UX traffic light colours</div>
-                                <div class="categories__text">UI has to make a huge visual difference between warning,
-                                    an alert and a success.</div>
+                                <div class="h3 categories__title4">Creativity vs. UX</div>
+                                <div class="h5 categories__text">Is it possible to create a delightful user experience without following best UX practices?</div>
                             </div>
                         </div>
                     </div>
-                    <div class="categories__button"><button class="button button--icon ">Load More </button></div>
+                    <div class="categories__button-container"><button class="button button--icon categories__button">Load More </button></div>
 
 
 
