--- a/src/pages/single-blog.html
+++ b/src/pages/single-blog.html
@@ -203,7 +203,56 @@
 
                     <!-- section comments -->
                     <section class="comments">
-
+                        <div class="container comments__container">
+                            <div class="h3 comments__title">Comments</div>
+                            <div class="comments__column">
+                                <div class="comments__item">
+                                    <div class="comments__item-row">
+                                        <img class="comments__img" src="../img/single-blog-img/sb-comments-photo1.jpg" alt="">
+                                        <div class="comments__info">
+                                            <div class="comments__name">
+                                                <div class="h4 comments__nick-name">Scarlet withch</div>
+                                                <div class="h9 comments__date">6 May, 2020</div>
+                                            </div>
+                                            <div class="h4 comments__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                            <div class="h6 comments__replay"><span><svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z" fill="#7B7B7B"/>
+                                                </svg></span> Reply</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="comments__item comments__item2">
+                                    <div class="comments__item-row">
+                                        <img class="comments__img" src="../img/single-blog-img/sb-comments-photo2.jpg" alt="">
+                                        <div class="comments__info">
+                                            <div class="comments__name">
+                                                <div class="h4 comments__nick-name">Scarlet withch</div>
+                                                <div class="h9 comments__date">6 May, 2020</div>
+                                            </div>
+                                            <div class="h4 comments__text comments__text2">Lorem ipsum dolor sit amet, consectet <wbr> uer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                            <div class="h6 comments__replay"><span><svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z" fill="#7B7B7B"/>
+                                                </svg></span> Reply</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="comments__item">
+                                    <div class="comments__item-row">
+                                        <img class="comments__img" src="../img/single-blog-img/sb-comments-photo1.jpg" alt="">
+                                        <div class="comments__info">
+                                            <div class="comments__name">
+                                                <div class="h4 comments__nick-name">Scarlet withch</div>
+                                                <div class="h9 comments__date">6 May, 2020</div>
+                                            </div>
+                                            <div class="h4 comments__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                            <div class="h6 comments__replay"><span><svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z" fill="#7B7B7B"/>
+                                                </svg></span> Reply</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </section>
 
                     <!-- section comments End -->
