--- a/src/pages/single-blog.html
+++ b/src/pages/single-blog.html
@@ -226,7 +226,7 @@
                                         <img class="comments__img" src="../img/single-blog-img/sb-comments-photo2.jpg" alt="">
                                         <div class="comments__info">
                                             <div class="comments__name">
-                                                <div class="h4 comments__nick-name">Scarlet withch</div>
+                                                <div class="h4 comments__nick-name">Kate Moss</div>
                                                 <div class="h9 comments__date">6 May, 2020</div>
                                             </div>
                                             <div class="h4 comments__text comments__text2">Lorem ipsum dolor sit amet, consectet <wbr> uer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
