--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -17,32 +17,35 @@
             <div class="container header__container">
                 <img class="logo" src="../img/logo.svg" alt="img">
                 <nav class="header__nav">
+                    <input class="header__nav-input" type="checkbox" id="gam">
                     <label class="header__nav-label" for="gam">
-                        <div class="header__nav-icon"><svg width="33" height="20" viewBox="0 0 33 20" fill="none"
+                        <div class="header__nav-icon">
+                            <span class="header__cross"> <svg width="33" height="20" viewBox="0 0 33 20" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect width="33" height="3.83721" fill="black" />
                                 <rect y="7.67432" width="33" height="3.83721" fill="black" />
                                 <rect y="15.3486" width="33" height="3.83721" fill="black" />
-                            </svg></div>
-                    </label>
-                    <input class="header__nav-input" type="checkbox" id="gam">
-                    <ul class="header__nav-row">
-                        <li class="header__nav-item">
-                            <a class="header__nav-link" href="/">Home</a>
-                        </li>
-                        <li class="header__nav-item">
-                            <a class="header__nav-link" href="./about.html">About</a>
-                        </li>
-                        <li class="header__nav-item">
-                            <a class="header__nav-link" href="./works.html">Works</a>
-                        </li>
-                        <li class="header__nav-item">
-                            <a class="header__nav-link" href="./blog.html">Blog</a>
-                        </li>
-                        <li class="header__nav-item header__nav-item--active">
-                            <a class="header__nav-link" href="./contact.html">Contact</a>
-                        </li>
-                    </ul>
+                            </svg></span>
+                            <span class="header__cross-close">X</span>
+                           </div>
+                           </label>
+                           <ul class="header__nav-row">
+                            <li class="header__nav-item">
+                                <a class="header__nav-link" href="../index.html">Home</a>
+                            </li>
+                            <li class="header__nav-item">
+                                <a class="header__nav-link" href="./about.html">About</a>
+                            </li>
+                            <li class="header__nav-item">
+                                <a class="header__nav-link" href="./works.html">Works</a>
+                            </li>
+                            <li class="header__nav-item">
+                                <a class="header__nav-link" href="./blog.html">Blog</a>
+                            </li>
+                            <li class="header__nav-item">
+                                <a class="header__nav-link header__nav-item--active" href="./contact.html">Contact</a>
+                            </li>
+                        </ul>
                 </nav>
             </div>
         </header>
