--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Manifest</title>
     <!--Шлях до css це відносний шлях не залежить ввід папки-->
     <link rel="stylesheet" href="@@webRoot/bundle.min.css">
+    <meta name="google-site-verification" content="xrMmi2-RD2dywhZlpCb4KbkI9R87vBRi9rN4VTAVMhU" />
 </head>
 
 <body>
