--- a/src/index.html
+++ b/src/index.html
@@ -240,6 +240,28 @@
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
         },
+
+        breakpoints: {
+            // when window width is >= 320px
+            320: {
+                slidesPerView: 1,
+                spaceBetween: 0,
+                slideToClickedSlide: true,
+            },
+            // when window width is >= 480px
+            480: {
+                slidesPerView: 2,
+                spaceBetween: 10,
+                slideToClickedSlide: true,
+
+            },
+            // when window width is >= 640px
+            768: {
+                slidesPerView: 2.58,
+        spaceBetween: 30,
+                slideToClickedSlide: true,
+            }
+        }
       });
     </script>
 </body>
